WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59657
WebKit2 needs to notify the client when a plugin fails to initialize
https://bugs.webkit.org/show_bug.cgi?id=59657
Summary
WebKit2 needs to notify the client when a plugin fails to initialize
Sam Weinig
Reported
2011-04-27 16:41:44 PDT
WebKit2 needs to notify the client when a plugin fails to load
Attachments
Patch
(9.27 KB, patch)
2011-04-27 16:43 PDT
,
Sam Weinig
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-04-27 16:43:30 PDT
Created
attachment 91379
[details]
Patch
Sam Weinig
Comment 2
2011-04-27 16:45:41 PDT
Committed
r85120
: <
http://trac.webkit.org/changeset/85120
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug