2011-04-27  Sam Weinig  <sam@webkit.org>

Reviewed by Adam Roben.

        WebKit2 needs to notify the client when a plugin fails to initialize
        https://bugs.webkit.org/show_bug.cgi?id=59657

        Add didFailToInitializePlugin client function and call it when a plugin
        fails to initialize.

        * UIProcess/API/C/WKPage.h:
        * UIProcess/API/qt/qwkpage.cpp:
        (QWKPage::QWKPage):
        * UIProcess/WebLoaderClient.cpp:
        (WebKit::WebLoaderClient::didFailToInitializePlugin):
        * UIProcess/WebLoaderClient.h:
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::didFailToInitializePlugin):
        * UIProcess/WebPageProxy.h:
        * UIProcess/WebPageProxy.messages.in:
        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::initializePlugin):
2011-04-27  Sam Weinig  <sam@webkit.org>

        Reviewed by Adam Roben.

        WebKit2 needs to notify the client when a plugin fails to initialize
        https://bugs.webkit.org/show_bug.cgi?id=59657

        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController awakeFromNib]):
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::initialize):
        Add stubs.


Canonical link: https://commits.webkit.org/74837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85120 268f45cc-cd09-0410-ab3c-d52691b4dbfc