Source/WebKit2/UIProcess/API/qt/qwkpage.cpp
@@ -457,7 +457,8 @@ QWKPage::QWKPage(QWKContext* context)
         qt_wk_didBecomeResponsive,
         0,  /* processDidCrash */
         0,  /* didChangeBackForwardList */
-        0   /* shouldGoToBackForwardListItem */
+        0,  /* shouldGoToBackForwardListItem */
+        0   /* didFailToInitializePlugin */
     };
     WKPageSetPageLoaderClient(pageRef(), &loadClient);
 
